src/expr/src/scalar/snapshots/mz_expr__scalar__func__bit_shift_left_int64.snap
---
source: src/expr/src/scalar/func.rs
expression: "#[sqlfunc(is_infix_op = true, sqlname = \"<<\", propagates_nulls = true)]\n#[allow(clippy::as_conversions)]\nfn bit_shift_left_int64(lhs: i64, rhs: i64) -> i64 {\n    let rhs = rhs as u32;\n    lhs.wrapping_shl(rhs)\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct BitShiftLeftInt64;
impl<'a> crate::func::binary::EagerBinaryFunc<'a> for BitShiftLeftInt64 {
    type Input1 = i64;
    type Input2 = i64;
    type Output = i64;
    fn call(
        &self,
        a: Self::Input1,
        b: Self::Input2,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output {
        bit_shift_left_int64(a, b)
    }
    fn output_type(
        &self,
        input_type_a: mz_repr::SqlColumnType,
        input_type_b: mz_repr::SqlColumnType,
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        output
            .nullable(
                nullable
                    || (propagates_nulls
                        && (input_type_a.nullable || input_type_b.nullable)),
            )
    }
    fn is_infix_op(&self) -> bool {
        true
    }
    fn propagates_nulls(&self) -> bool {
        true
    }
}
impl std::fmt::Display for BitShiftLeftInt64 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("<<")
    }
}
#[allow(clippy::as_conversions)]
fn bit_shift_left_int64(lhs: i64, rhs: i64) -> i64 {
    let rhs = rhs as u32;
    lhs.wrapping_shl(rhs)
}
